# operators-rs

./: Cargo.toml  README.md
operators/: Cargo.toml  build.rs
operators/src/: .clang-format  between_f32.rs  data.rs  error.rs  lib.rs  record.rs  utils.rs
operators/src/add/: args.rs  mod.rs
operators/src/add/common_cpu/: mod.rs
operators/src/add/cuda/: add.cuh  mod.rs
operators/src/add/infini/: mod.rs
operators/src/add/nvidia_gpu/: mod.rs
operators/src/add/opencl/: mod.rs
operators/src/add_rows/: args.rs  mod.rs
operators/src/add_rows/ascend/: mod.rs
operators/src/add_rows/common_cpu/: mod.rs
operators/src/add_rows/cuda/: add_rows.cuh  mod.rs
operators/src/add_rows/infini/: mod.rs
operators/src/add_rows/nvidia_gpu/: mod.rs
operators/src/add_rows/opencl/: mod.rs
operators/src/all_reduce/: args.rs  common_cpu.rs  infini.rs  mod.rs  nccl.rs  non_all_reduce.rs
operators/src/all_reduce/common_cpu/: mod.rs
operators/src/all_reduce/nccl/: mod.rs
operators/src/arg_max/: args.rs  kv_pair.rs  mod.rs
operators/src/arg_max/common_cpu/: mod.rs
operators/src/arg_max/nvidia_gpu/: argmax.cuh  mod.rs
operators/src/attention/: args.rs  cuda.rs  mod.rs  nvidia_gpu.rs  opencl.rs  operator.rs
operators/src/attention_kv_cached/: args.rs  common_cpu.rs  cuda.rs  mod.rs  nvidia_gpu.rs  operator.rs
operators/src/attention_mla/: args.rs  mod.rs  operator.rs
operators/src/attention_mla_cached/: args.rs  cuda.rs  mod.rs  operator.rs
operators/src/broadcast/: args.rs  mod.rs  non_operator.rs
operators/src/broadcast/common_cpu/: mod.rs
operators/src/broadcast/nccl/: mod.rs
operators/src/common/: blob.rs  calculator.rs  diversity.rs  error.rs  maybe_dyn.rs  mod.rs  pool.rs  tensor.rs  unsigned.rs  workspace.rs
operators/src/conv/: args.rs  ascend.rs  common_cpu.rs  cuda.rs  im2col.rs  infini.rs  mod.rs  nvidia_gpu.rs  opencl.rs
operators/src/devices/: mod.rs
operators/src/devices/common_cpu/: mod.rs
operators/src/devices/nvidia_gpu/: mod.rs
operators/src/fuesd_softmax/: args.rs  layout.rs  mod.rs
operators/src/fuesd_softmax/ascend/: mod.rs
operators/src/fuesd_softmax/common_cpu/: mod.rs
operators/src/fuesd_softmax/cuda/: fused_softmax.cuh  mod.rs
operators/src/fuesd_softmax/infini/: mod.rs
operators/src/fuesd_softmax/nvidia_gpu/: fused_softmax.cuh  mod.rs
operators/src/fuesd_softmax/opencl/: fuesd_softmax.cl  fused_softmax.cl  mod.rs
operators/src/gelu/: args.rs  common_cpu.rs  mod.rs
operators/src/gelu/common_cpu/: mod.rs
operators/src/gelu/cuda/: gelu.cuh  mod.rs
operators/src/gelu/infini/: mod.rs
operators/src/gelu/nvidia_gpu/: mod.rs
operators/src/gelu/opencl/: mod.rs
operators/src/gpt2_mlp/: args.rs  infini.rs  mod.rs  nvidia_gpu.rs  operator.rs
operators/src/handle/: mod.rs
operators/src/handle/ascend/: mod.rs
operators/src/handle/ascend_card/: mod.rs
operators/src/handle/cambricon_mlu/: mod.rs
operators/src/handle/common_cpu/: inproc_node.rs  mod.rs
operators/src/handle/cuda/: alloc.rs  library.rs  mod.rs  nccl.rs
operators/src/handle/infini/: ccl.rs  mod.rs
operators/src/handle/nvidia_gpu/: library.rs  mod.rs  module.rs
operators/src/handle/opencl/: mod.rs
operators/src/layer_norm/: args.rs  mod.rs
operators/src/layer_norm/ascend/: mod.rs
operators/src/layer_norm/common_cpu/: mod.rs
operators/src/layer_norm/cuda/: layer_norm.cuh  mod.rs
operators/src/layer_norm/infini/: mod.rs
operators/src/layer_norm/nvidia_gpu/: mod.rs
operators/src/layer_norm/opencl/: mod.rs
operators/src/mat_mul/: args.rs  layout.rs  mod.rs
operators/src/mat_mul/ascend/: mod.rs
operators/src/mat_mul/common_cpu/: mod.rs
operators/src/mat_mul/cuda/: mod.rs
operators/src/mat_mul/infini/: mod.rs
operators/src/mat_mul/nvidia_gpu/: mod.rs
operators/src/mat_mul/opencl/: mat_mul.cl  mod.rs
operators/src/mlp/: args.rs  ascend.rs  mod.rs  nvidia_gpu.rs  operator.rs
operators/src/operators/: mod.rs
operators/src/operators/rms_norm/: layout.rs  mod.rs
operators/src/operators/rope/: layout.rs  mod.rs
operators/src/operators/swiglu/: layout.rs  mod.rs
operators/src/random_sample/: args.rs  kv_pair.rs  mod.rs
operators/src/random_sample/ascend/: mod.rs
operators/src/random_sample/common_cpu/: mod.rs
operators/src/random_sample/cuda/: ffi.rs  mod.rs  sample.cuh
operators/src/random_sample/infini/: mod.rs
operators/src/random_sample/nvidia_gpu/: ffi.rs  mod.rs  sample.cuh
operators/src/random_sample/opencl/: mod.rs  random_sample.cl
operators/src/rearrange/: args.rs  mod.rs
operators/src/rearrange/ascend/: mod.rs
operators/src/rearrange/common_cpu/: mod.rs
operators/src/rearrange/cuda/: mod.rs  rearrange.cuh
operators/src/rearrange/infini/: mod.rs
operators/src/rearrange/nvidia_gpu/: mod.rs
operators/src/rearrange/opencl/: mod.rs  rearrange.cl
operators/src/reform/: args.rs  layout.rs  mod.rs
operators/src/reform/common_cpu/: mod.rs
operators/src/reform/nvidia_gpu/: mod.rs  reform.cuh
operators/src/rms_norm/: args.rs  layout.rs  mod.rs
operators/src/rms_norm/ascend/: mod.rs
operators/src/rms_norm/cambricon_mlu/: mod.rs
operators/src/rms_norm/common_cpu/: mod.rs
operators/src/rms_norm/cuda/: mod.rs  rms_norm.cuh
operators/src/rms_norm/infini/: mod.rs
operators/src/rms_norm/nvidia_gpu/: mod.rs  rms_norm.cuh
operators/src/rms_norm/opencl/: mod.rs  rms_norm.cl
operators/src/rope/: args.rs  layout.rs  mod.rs
operators/src/rope/ascend/: mod.rs
operators/src/rope/common_cpu/: mod.rs
operators/src/rope/cuda/: mod.rs  rope.cuh
operators/src/rope/infini/: mod.rs
operators/src/rope/nvidia_gpu/: mod.rs  rope.cuh
operators/src/rope/opencl/: mod.rs  rope.cl
operators/src/scale/: args.rs  mod.rs
operators/src/scale/common_cpu/: mod.rs
operators/src/scale/cuda/: mod.rs
operators/src/scale/infini/: mod.rs
operators/src/scale/opencl/: mod.rs
operators/src/swiglu/: args.rs  layout.rs  mod.rs
operators/src/swiglu/ascend/: mod.rs
operators/src/swiglu/cambricon_mlu/: mod.rs
operators/src/swiglu/cuda/: mod.rs  (+1 more)
operators/src/test/: gguf.rs  mod.rs
(+37 files in other folders)
