[workspace]
members = ["operators"]
resolver = "2"

[workspace.dependencies]
clrt = { git = "https://github.com/InfiniTensor/clrt", rev = "9b6289d" }
search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "9b6289d" }

infini-rt = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "29fd321" }
infini-op = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "29fd321" }
infini-ccl = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "29fd321" }
search-infini-tools = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "29fd321" }

cuda = { git = "https://github.com/YdrMaster/cuda-driver.git", rev = "b064bfb" }
cublas = { git = "https://github.com/YdrMaster/cuda-driver.git", rev = "b064bfb" }
nccl = { git = "https://github.com/YdrMaster/cuda-driver.git", rev = "b064bfb" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver.git", rev = "b064bfb" }
search-corex-tools = { git = "https://github.com/YdrMaster/cuda-driver.git", rev = "b064bfb" }
