[package]
name = "operators"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[features]
default = ["common-cpu", "opencl", "infini", "nvidia-gpu"]
common-cpu = ["gemm"]
opencl = ["clrt"]
infini = ["infini-rt"]
nvidia-gpu = ["cuda", "cublas", "nccl", "libloading"]

[dependencies]
ndarray-layout.workspace = true
digit-layout = "0.2"
rayon = "1.10"
lru = "0.12"
num-traits = "0.2"
half = "2.4"
log = "0.4"

gemm = { version = "0.18", optional = true }

clrt = { workspace = true, optional = true }

infini-rt = { workspace = true, optional = true }

cuda = { workspace = true, optional = true }
cublas = { workspace = true, optional = true }
nccl = { workspace = true, optional = true }
libloading = { version = "0.8", optional = true }

[build-dependencies]
build-script-cfg = "0.0"
search-cl-tools.workspace = true
search-infini-tools.workspace = true
search-cuda-tools.workspace = true

[dev-dependencies]
gemm = "0.18"
rand = "0.8"
