[package]
name = "operators"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[features]
default = ["common-cpu", "opencl", "infini", "nvidia-gpu", "iluvatar-gpu"]
common-cpu = ["gemm"]
opencl = ["clrt"]
infini = ["infini-rt", "infini-op", "infini-ccl"]
nvidia-gpu = ["cuda", "cublas", "nccl", "fslock", "libloading"]
iluvatar-gpu = ["cuda", "cublas", "fslock", "libloading"]

[dependencies]
digit-layout = "0.2"
ndarray-layout = "0.1"
rayon = "1.10"
lru = "0.12"
num-traits = "0.2"
itertools = "0.14"
half = "2.4"
log = "0.4"

gemm = { version = "0.18", optional = true }

clrt = { workspace = true, optional = true }

infini-rt = { workspace = true, optional = true }
infini-op = { workspace = true, optional = true }
infini-ccl = { workspace = true, optional = true }

cuda = { workspace = true, optional = true }
cublas = { workspace = true, optional = true }
nccl = { workspace = true, optional = true }
fslock = { version = "0.2", optional = true }
libloading = { version = "0.8", optional = true }

[build-dependencies]
build-script-cfg = "0.0"
search-cl-tools.workspace = true
search-infini-tools.workspace = true
search-cuda-tools.workspace = true
search-corex-tools.workspace = true

[dev-dependencies]
gemm = "0.18"
rand = "0.9"
